gen/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListDecl                                (4)
	ListDecl ->                                        (5)
	ListDecl -> Decl ListDecl                          (6)
	Decl -> Type Ident ';'                             (7)
	Decl -> Type Ident '=' Expr ';'                    (8)
	Decl -> Type Ident '(' ListArg ')' Block           (9)
	Arg -> Type Ident                                  (10)
	Arg -> Type '&' Ident                              (11)
	ListArg ->                                         (12)
	ListArg -> Arg                                     (13)
	ListArg -> Arg ',' ListArg                         (14)
	Block -> '{' ListDecl ListStmt '}'                 (15)
	ListStmt ->                                        (16)
	ListStmt -> Stmt ListStmt                          (17)
	Stmt -> ';'                                        (18)
	Stmt -> Block                                      (19)
	Stmt -> Ident '=' Expr ';'                         (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Block                    (23)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (24)
	Stmt -> 'while' '(' Expr ')' Block                 (25)
	Stmt -> 'break'                                    (26)
	Stmt -> 'continue'                                 (27)
	Stmt -> Expr ';'                                   (28)
	Stmt -> 'print' '(' Expr ')'                       (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> 'void'                                     (33)
	Expr6 -> Ident                                     (34)
	Expr6 -> Integer                                   (35)
	Expr6 -> 'true'                                    (36)
	Expr6 -> 'false'                                   (37)
	Expr6 -> Ident '(' ListExpr ')'                    (38)
	Expr6 -> String                                    (39)
	Expr6 -> '(' Expr ')'                              (40)
	Expr5 -> '-' Expr6                                 (41)
	Expr5 -> '!' Expr6                                 (42)
	Expr5 -> Expr6                                     (43)
	Expr4 -> Expr4 MulOp Expr5                         (44)
	Expr4 -> Expr5                                     (45)
	Expr3 -> Expr3 AddOp Expr4                         (46)
	Expr3 -> Expr4                                     (47)
	Expr2 -> Expr2 RelOp Expr3                         (48)
	Expr2 -> Expr3                                     (49)
	Expr1 -> Expr2 '&&' Expr1                          (50)
	Expr1 -> Expr2                                     (51)
	Expr -> Expr1 '||' Expr                            (52)
	Expr -> Expr1                                      (53)
	ListExpr ->                                        (54)
	ListExpr -> Expr                                   (55)
	ListExpr -> Expr ',' ListExpr                      (56)
	AddOp -> '+'                                       (57)
	AddOp -> '-'                                       (58)
	MulOp -> '*'                                       (59)
	MulOp -> '/'                                       (60)
	MulOp -> '%'                                       (61)
	RelOp -> '<'                                       (62)
	RelOp -> '<='                                      (63)
	RelOp -> '>'                                       (64)
	RelOp -> '>='                                      (65)
	RelOp -> '=='                                      (66)
	RelOp -> '!='                                      (67)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'bool'         { PT _ (TS _ 20) }
	'break'        { PT _ (TS _ 21) }
	'continue'     { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'print'        { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'void'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	ListDecl        rules 5, 6
	Decl            rules 7, 8, 9
	Arg             rules 10, 11
	ListArg         rules 12, 13, 14
	Block           rule  15
	ListStmt        rules 16, 17
	Stmt            rules 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Type            rules 30, 31, 32, 33
	Expr6           rules 34, 35, 36, 37, 38, 39, 40
	Expr5           rules 41, 42, 43
	Expr4           rules 44, 45
	Expr3           rules 46, 47
	Expr2           rules 48, 49
	Expr1           rules 50, 51
	Expr            rules 52, 53
	ListExpr        rules 54, 55, 56
	AddOp           rules 57, 58
	MulOp           rules 59, 60, 61
	RelOp           rules 62, 63, 64, 65, 66, 67

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 5

	Program        goto state 3
	ListDecl       goto state 4
	Decl           goto state 5
	Type           goto state 6

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	Program -> ListDecl .                               (rule 4)

	%eof           reduce using rule 4


State 5

	ListDecl -> Decl . ListDecl                         (rule 6)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'bool'         shift, and enter state 7
	'break'        reduce using rule 5
	'continue'     reduce using rule 5
	'false'        reduce using rule 5
	'if'           reduce using rule 5
	'int'          shift, and enter state 8
	'print'        reduce using rule 5
	'return'       reduce using rule 5
	'string'       shift, and enter state 9
	'true'         reduce using rule 5
	'void'         shift, and enter state 10
	'while'        reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	L_Ident        reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	%eof           reduce using rule 5

	ListDecl       goto state 12
	Decl           goto state 5
	Type           goto state 6

State 6

	Decl -> Type . Ident ';'                            (rule 7)
	Decl -> Type . Ident '=' Expr ';'                   (rule 8)
	Decl -> Type . Ident '(' ListArg ')' Block          (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'bool' .                                    (rule 32)

	'&'            reduce using rule 32
	L_Ident        reduce using rule 32


State 8

	Type -> 'int' .                                     (rule 30)

	'&'            reduce using rule 30
	L_Ident        reduce using rule 30


State 9

	Type -> 'string' .                                  (rule 31)

	'&'            reduce using rule 31
	L_Ident        reduce using rule 31


State 10

	Type -> 'void' .                                    (rule 33)

	'&'            reduce using rule 33
	L_Ident        reduce using rule 33


State 11

	Decl -> Type Ident . ';'                            (rule 7)
	Decl -> Type Ident . '=' Expr ';'                   (rule 8)
	Decl -> Type Ident . '(' ListArg ')' Block          (rule 9)

	'('            shift, and enter state 13
	';'            shift, and enter state 14
	'='            shift, and enter state 15


State 12

	ListDecl -> Decl ListDecl .                         (rule 6)

	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	';'            reduce using rule 6
	'break'        reduce using rule 6
	'continue'     reduce using rule 6
	'false'        reduce using rule 6
	'if'           reduce using rule 6
	'print'        reduce using rule 6
	'return'       reduce using rule 6
	'true'         reduce using rule 6
	'while'        reduce using rule 6
	'{'            reduce using rule 6
	'}'            reduce using rule 6
	L_Ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6
	%eof           reduce using rule 6


State 13

	Decl -> Type Ident '(' . ListArg ')' Block          (rule 9)

	')'            reduce using rule 12
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 33
	ListArg        goto state 34
	Type           goto state 35

State 14

	Decl -> Type Ident ';' .                            (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'bool'         reduce using rule 7
	'break'        reduce using rule 7
	'continue'     reduce using rule 7
	'false'        reduce using rule 7
	'if'           reduce using rule 7
	'int'          reduce using rule 7
	'print'        reduce using rule 7
	'return'       reduce using rule 7
	'string'       reduce using rule 7
	'true'         reduce using rule 7
	'void'         reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 15

	Decl -> Type Ident '=' . Expr ';'                   (rule 8)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'-'            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 16
	Integer        goto state 17
	String         goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 25

State 16

	Expr6 -> Ident .                                    (rule 34)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 38)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	'('            shift, and enter state 60
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'||'           reduce using rule 34


State 17

	Expr6 -> Integer .                                  (rule 35)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35


State 18

	Expr6 -> String .                                   (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 19

	Expr5 -> Expr6 .                                    (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 20

	Expr4 -> Expr5 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45


State 21

	Expr4 -> Expr4 . MulOp Expr5                        (rule 44)
	Expr3 -> Expr4 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            shift, and enter state 57
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            shift, and enter state 58
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            shift, and enter state 59
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47

	MulOp          goto state 56

State 22

	Expr3 -> Expr3 . AddOp Expr4                        (rule 46)
	Expr2 -> Expr3 .                                    (rule 49)

	'!='           reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'+'            shift, and enter state 54
	','            reduce using rule 49
	'-'            shift, and enter state 55
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49

	AddOp          goto state 53

State 23

	Expr2 -> Expr2 . RelOp Expr3                        (rule 48)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 50)
	Expr1 -> Expr2 .                                    (rule 51)

	'!='           shift, and enter state 46
	'&&'           shift, and enter state 47
	')'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'=='           shift, and enter state 50
	'>'            shift, and enter state 51
	'>='           shift, and enter state 52
	'||'           reduce using rule 51

	RelOp          goto state 45

State 24

	Expr -> Expr1 . '||' Expr                           (rule 52)
	Expr -> Expr1 .                                     (rule 53)

	')'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53
	'||'           shift, and enter state 44


State 25

	Decl -> Type Ident '=' Expr . ';'                   (rule 8)

	';'            shift, and enter state 43


State 26

	Expr5 -> '!' . Expr6                                (rule 42)

	'('            shift, and enter state 27
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 16
	Integer        goto state 17
	String         goto state 18
	Expr6          goto state 42

State 27

	Expr6 -> '(' . Expr ')'                             (rule 40)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'-'            shift, and enter state 28
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 16
	Integer        goto state 17
	String         goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 41

State 28

	Expr5 -> '-' . Expr6                                (rule 41)

	'('            shift, and enter state 27
	'false'        shift, and enter state 29
	'true'         shift, and enter state 30
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 32

	Ident          goto state 16
	Integer        goto state 17
	String         goto state 18
	Expr6          goto state 40

State 29

	Expr6 -> 'false' .                                  (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'||'           reduce using rule 37


State 30

	Expr6 -> 'true' .                                   (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	'&&'           reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'||'           reduce using rule 36


State 31

	Integer -> L_integ .                                (rule 2)
